infrastructure/k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: photocrm
  labels:
    name: photocrm
    app: photocrm-saas
